MetaModel: Fix some references

--- a/python/src/MetaModelAlgorithm_doc.i.in
+++ b/python/src/MetaModelAlgorithm_doc.i.in
@@ -10,7 +10,7 @@ distribution : :class:`~openturns.Distribution`, optional
 
 See also
 --------
-LinearModelAlgorithm, KrigingAlgorithm, GeneralLinearModelAlgorithm, FunctionalChaosAlgorithm"
+LinearModelAlgorithm, GeneralLinearModelAlgorithm, FunctionalChaosAlgorithm"
 
 // ---------------------------------------------------------------------
 
