--- a/python/src/MetaModelResult_doc.i.in
+++ b/python/src/MetaModelResult_doc.i.in
@@ -10,7 +10,7 @@ metaModel : :class:`~openturns.Function`
 
 Notes
 -----
-Structure created by the method run() of :class:`~openturns.KrigingAlgorithm`
+Structure created by the method run() of `KrigingAlgorithm`
 or :class:`~openturns.FunctionalChaosAlgorithm` and obtained thanks to the
 method getResult() of these classes.
 
