--- a/python/src/PointConditionalDistribution_doc.i.in
+++ b/python/src/PointConditionalDistribution_doc.i.in
@@ -76,7 +76,8 @@ Notes
 Simplification mechanisms to compute :eq:`condPDF` are implemented for some distributions.
 To know if a simplification is used, ask the method *hasSimplifiedVersion*.
 
-If the dimension of :math:`\inputRV_\cI` is greater than 1, the default integration algorithm is the :class:`~openturns.experimental.CubaIntegration` defined in the entry  *PointConditionalDistribution-CubaAlgorithm* if available and the
+If the dimension of :math:`\inputRV_\cI` is greater than 1, the default integration algorithm is :class:`~openturns.CubaIntegration`
+defined in the entry *PointConditionalDistribution-CubaAlgorithm* if available and the
 :class:`~openturns.SimplicialCubature` algorithm if not. If the
 dimension of :math:`\inputRV_\cI` is 1, then the default integration algorithm is the :class:`~openturns.GaussKronrod` algorithm with its default
 quadrature formula.
@@ -243,7 +244,8 @@ algo : :class:`~openturns.IntegrationAlgorithm`
 
 Notes
 -----
-By default, if the dimension of :math:`\inputRV_\cI` is greater than 1, the integration algorithm is the :class:`~openturns.experimental.CubaIntegration` defined in the entry  `PointConditionalDistribution-CubaAlgorithm` if available and the :class:`~openturns.SimplicialCubature` algorithm if not. If the
+By default, if the dimension of :math:`\inputRV_\cI` is greater than 1, the integration algorithm is :class:`~openturns.CubaIntegration`
+defined in the entry `PointConditionalDistribution-CubaAlgorithm` if available and the :class:`~openturns.SimplicialCubature` algorithm if not. If the
 dimension of :math:`\inputRV_\cI` is 1, then the integration algorithm is the :class:`~openturns.GaussKronrod` algorithm with ts default quadrature
 formula."
 // ---------------------------------------------------------------------
