--- a/python/src/RankSobolSensitivityAlgorithm_doc.i.in
+++ b/python/src/RankSobolSensitivityAlgorithm_doc.i.in
@@ -1,10 +1,6 @@
 %feature("docstring") OT::RankSobolSensitivityAlgorithm
 "Sensitivity analysis using rank-based method.
 
-.. warning::
-    This class is experimental and likely to be modified in future releases.
-    To use it, import the ``openturns.experimental`` submodule.
-
 Parameters
 ----------
 inputDesign : :class:`~openturns.Sample`
@@ -15,12 +11,11 @@ outputDesign : :class:`~openturns.Sample`
 Examples
 --------
 >>> import openturns as ot
->>> import openturns.experimental as otexp
 >>> from openturns.usecases import ishigami_function
 >>> im = ishigami_function.IshigamiModel()
 >>> x = im.inputDistribution.getSample(100)
 >>> y = im.model(x)
->>> algo = otexp.RankSobolSensitivityAlgorithm(x, y)
+>>> algo = ot.RankSobolSensitivityAlgorithm(x, y)
 >>> indices = algo.getFirstOrderIndices()
 
 Notes
